@@ -395,7 +395,7 @@ public class FontManagerD extends FontManager {
 		UIManager.put("Table.font", plain);
 		UIManager.put("TableHeader.font", plain);
 		UIManager.put("Tree.font", plain);
-		UIManager.put("Tree.rowHeight", new Integer(plain.getSize() + 5));
+		UIManager.put("Tree.rowHeight", Integer.valueOf(plain.getSize() + 5));
 		UIManager.put("List.font", plain);
 		UIManager.put("TextField.font", plain);
 		UIManager.put("PasswordField.font", plain);
